// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons Component: BreadcrumbIcon BreadcrumbIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6.667 4-.94.94L8.78 8l-3.053 3.06.94.94 4-4-4-4Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: FilledArrowIcon FilledArrowIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.166 8 .94.94 3.727-3.72v8.113h1.333V5.22l3.72 3.727.947-.947-5.334-5.333L3.166 8Z"
      fill="currentcolor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons Component: TooltipIcon TooltipIcon renders with default props 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="16"
      id="a"
      maskUnits="userSpaceOnUse"
      style="mask-type: alpha;"
      width="16"
      x="0"
      y="0"
    >
      <path
        d="M7.333 4.667h1.334V6H7.334V4.667ZM7.333 7.333h1.334v4H7.334v-4Z"
        fill="currentcolor"
      />
      <path
        clip-rule="evenodd"
        d="M1.333 8A6.67 6.67 0 0 1 8 1.333 6.67 6.67 0 0 1 14.667 8 6.67 6.67 0 0 1 8 14.667 6.67 6.67 0 0 1 1.333 8Zm1.334 0A5.34 5.34 0 0 0 8 13.333 5.34 5.34 0 0 0 13.334 8 5.34 5.34 0 0 0 8 2.667 5.34 5.34 0 0 0 2.667 8Z"
        fill="currentcolor"
        fill-rule="evenodd"
      />
    </mask>
    <g
      mask="url(#a)"
    >
      <path
        d="M0 0h16v16H0z"
        fill="currentcolor"
      />
    </g>
  </svg>
</DocumentFragment>
`;
